# willow1-mod-manager

./: .cruft.json  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  changelog.md  manager_pyproject.toml  pick_release_name.py  prepare_release.py  pyproject.toml
.github/workflows/: build.yml
src/: __main__.py  proxy__main__.py
src/ui_utils/: __init__.py  chat.py  clipboard.py  hud_message.py  option_box.py  reorder_box.py  training_box.py
src/willow1_mod_menu/: __init__.py  frontend.py  lobby.py  options.py  pause.py  util.py
src/willow1_mod_menu/populators/: __init__.py  mod_list.py  mod_options.py  options.py
